# music-hack-berklee

doc/: ai-sound-canvas.html  google-deepmind-challenge.html  google-deepmind-challenge.md  ideas.html  index.html  index.md  stability-ai-challenge.html  stability-ai-challenge.md  suno-api.html  suno-challenge.html  suno-challenge.md
examples/magenta-realtime-2/: README.md  main.py  pyproject.toml  server.py
examples/magenta-realtime-2/src/: engine.py  gesture.py  jam.py  looper.py  synth.py
examples/magenta-realtime-2/static/: audio-worklet.js  index.html
